Editorial fixes to g77 docs
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25790 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/news.texi
+++ b/gcc/f/news.texi
@@ -107,7 +107,7 @@ somewhat more difficult.
 
 @ifset DOC-G77
 For information on bugs in the @value{which-g77} version of @code{g77},
-@ref{Known Bugs,,Known Bugs In GNU Fortran}.
+see @ref{Known Bugs,,Known Bugs In GNU Fortran}.
 @end ifset
 
 @ifset DOC-BUGS
