* lex.c: Don't include setjmp.h.         (parse_float): New static function.         (pf_args): New struct.         (real_yylex): Use them in call to `do_float_handler'.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25794 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+Mon Mar 15 21:57:16 1999  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+        * lex.c: Don't include setjmp.h.
+	(parse_float): New static function.
+	(pf_args): New struct.
+	(real_yylex): Use them in call to `do_float_handler'.
+
 1999-03-15  Mark Mitchell  <mark@markmitchell.com>
 
 	* decl.c (xref_basetypes): Set CLASSTYPE_VBASECLASSES here.
