--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-16  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
+
+	* .gdbinit: Move command to put breakpoint at abort to end of file
+	so that gdb does not bail out early.
+
 Tue Mar 16 15:30:19 1999  Nick Clifton  <nickc@cygnus.com>
 
 	* rtl.h: Rename prototype for free_bb_memory to free_bb_mem. 
