Editorial fix to g77 news
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25819 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+Wed Mar 17 11:39:44 1999  Craig Burley  <craig@jcb-sc.com>
+
+	* news.texi: Editorial fix.
+
 Mon Mar 15 17:12:07 1999  Craig Burley  <craig@jcb-sc.com>
 
 	* bugs.texi, g77.texi, news.texi: Editorial fixes.
