--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Wed Mar 17 12:16:26 1999  Richard Henderson  <rth@cygnus.com>
+
+	* function.c (fixup_var_refs_1): First try moving the expression
+	directly into a register.  Don't separate cc0 setter and user.
+
 Wed Mar 17 11:20:29 1999  Dave Brolley  <brolley@cygnus.com>
 
 	* cppfiles.c (PIPE_BUF): #define PIPE_BUF if not defined already.
