--- a/gcc/invoke.texi
+++ b/gcc/invoke.texi
@@ -5190,7 +5190,7 @@ Enable the use of assembler directives only GAS understands.
 @item -mschedule=@var{cpu type}
 Schedule code according to the constraints for the machine type
 @var{cpu type}.  The choices for @var{cpu type} are @samp{700} 
-@samp{7100}, @samp{7100LC}, and @samp{7200}.  Refer to 
+@samp{7100}, @samp{7100LC}, @samp{7200}, and @samp{8000}.  Refer to 
 @file{/usr/lib/sched.models} on an HP-UX system to determine the
 proper scheduling option for your machine.
 
