--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,6 +1,8 @@
 Wed Mar 17 20:38:08 1999  Jerry Quinn <jquinn@nortelnetworks.com>
 			  Jeff Law <law@cygnus.com>
 
+        * pa.md: Add real PA8000 scheduling information.
+
         * pa.h (processor_type):  Add PROCESSOR_8000 symbol.
         (ISSUE_RATE):  Revamp, including PA8000 support.
         * pa.c (override_options):  Add 8000 as -mschedule= option.
