* flow.c (compute_immediate_dominators): New function.         * basic-block.h (compute_immediate_dominators): Declare it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25831 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -23,6 +23,9 @@ Wed Mar 17 18:20:24 1999  David S. Miller  <davem@redhat.com>
 
 Wed Mar 17 14:51:19 1999  Richard Henderson  <rth@cygnus.com>
 
+	* flow.c (compute_immediate_dominators): New function.
+	* basic-block.h (compute_immediate_dominators): Declare it.
+
 	* alpha.h (HARD_REGNO_MODE_OK): Allow only 4 and 8 byte unit modes
 	in FP regs.
 	(MODES_TIEABLE_P): Define asymmetricly wrt modes illegal in FP regs.
