--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Wed Mar 17 23:00:18 1999  Robert Lipe <robertlipe@usa.net>
+
+	* fixinc/fixincl.c: Include auto-host.h instead of config.h
+	* fixinc/procopen.c: Likewise.
+	* fixinc/regex.c: Likewise.
+	* fixinc/server.c: Likewise.
+
 Wed Mar 17 22:46:13 1999  Mark Elbrecht  <snowball3@usa.net.
 
 	* gcc.c (process_command): Dump link_command_spec too.
