* config/mips/mips.c (mips_explicit_type_size_string): Correct        its type.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@25838 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+1999-03-18  Gavin Romig-Koch  <gavin@cygnus.com>
+
+	* config/mips/mips.c (mips_explicit_type_size_string): Correct
+       its type.
+
 Thu Mar 18 01:24:25 1999  Jeffrey A Law  (law@cygnus.com)
 
 	* configure.in: Use "exit 1", not "exit (1)".
